Full Cycle 3.0 - Microsserviço: API do Catálogo com Java ( Back-end ) - 1104 - igualando projeto com o projeto do curso ate o modulo 11 do repo do curso